--- a/.releaserc
+++ b/.releaserc
@@ -4,5 +4,8 @@
     "@semantic-release/release-notes-generator",
     "@semantic-release/github",
     "@semantic-release/git"
+  ],
+  "branches": [
+    "main"
   ]
 }
