--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "url": "https://github.com/scriptcoded/semantic-release-test.git"
   },
   "devDependencies": {
+    "@semantic-release/changelog": "^5.0.1",
     "@semantic-release/git": "^9.0.0",
     "semantic-release": "^17.4.4"
   }
