--- a/.releaserc
+++ b/.releaserc
@@ -4,7 +4,9 @@
     "@semantic-release/release-notes-generator",
     "@semantic-release/changelog",
     "@semantic-release/github",
-    "@semantic-release/git"
+    ["@semantic-release/git", {
+      "assets": ["CHANGELOG.md"]
+    }]
   ],
   "branches": [
     "main"
